Add PUT /api/config enpoint to update settings
