# repository_service_tuf_api/config.py
@@ -3,13 +3,19 @@
 # SPDX-License-Identifier: MIT
 
 import json
-from typing import Any, Dict
+from typing import Any, Dict, Literal
 
 from fastapi import HTTPException, status
 from pydantic import BaseModel
 
-from repository_service_tuf_api import is_bootstrap_done, settings_repository
+from repository_service_tuf_api import (
+    get_task_id,
+    is_bootstrap_done,
+    repository_metadata,
+    settings_repository
+)
 
+from repository_service_tuf_api.common_models import Roles
 
 class Response(BaseModel):
     data: Dict[str, Any]
@@ -28,11 +34,74 @@ class Response(BaseModel):
         }
 
 
+class PutResponse(BaseModel):
+    data: Dict[str, Any]
+    message: str
+
+    class Config:
+        with open("tests/data_examples/config/update_settings.json") as f:
+            content = f.read()
+        example_settings = json.loads(content)
+
+        schema_extra = {
+            "example": {
+                "message": "Settings successfully updated.",
+                "task_id": "06ee6db3cbab4b26be505352c2f2e2c3",
+            }
+        }
+
+
+
+class Settings(BaseModel):
+    # Only online roles can be dict keys
+    expiration: Dict[Roles.online_roles_values(), int]
+
+
+class PutPayload(BaseModel):
+    settings: Settings
+
+    class Config:
+        with open("tests/data_examples/config/update_settings.json") as f:
+            content = f.read()
+        example_settings = json.loads(content)
+
+        schema_extra = {
+            "example": example_settings,
+        }
+
+
+def put(payload: PutPayload):
+    if is_bootstrap_done() is False:
+        raise HTTPException(
+            status.HTTP_404_NOT_FOUND,
+            detail={"error": "System has no repository metadata"},
+        )
+
+    task_id = get_task_id()
+
+    repository_metadata.apply_async(
+        kwargs={
+            "action": "update_settings",
+            "payload": payload.dict(by_alias=True, exclude_none=True),
+        },
+        task_id=task_id,
+        queue="metadata_repository",
+        acks_late=True,
+    )
+    data = {
+        "task_id": task_id
+    }
+
+    return PutResponse(
+        data=data, message="Settings successfully updated."
+    )
+
+
 def get():
     if is_bootstrap_done() is False:
         raise HTTPException(
             status.HTTP_404_NOT_FOUND,
-            detail={"error": "System has not a Repository Metadata"},
+            detail={"error": "System has no repository metadata"},
         )
 
     settings_repository.reload()
